# fastapi-template

./: .cursor-rules  .dockerignore  .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  API_USAGE_EXAMPLES.md  CHANGELOG.md  Dockerfile  LICENSE  MAKEFILE_GUIDE.md  Makefile  README.md  deploy-web.sh  docker-compose.yml  env.dev  pyproject.toml  test-deployment.sh  test-frontend-api.sh
.cursor/: mcp.json
.cursor/rules/: project.mdc
alembic/: env.py
alembic/versions/: 0991fc5dca66_remove_role_parent_id_column.py  145548601196_add_langgraph_tables.py  9aad798d4ed2_add_rbac_tables.py
app/: __init__.py  agent.py  main.py  sample_agent.py
app/api/: chat.py  conversations.py  files.py  roles.py  users.py
app/api/v1/: heroes_route.py
app/backends/: MULTI_USER_ANALYSIS.md  README.md  __init__.py  docker_sandbox.py  filesystem_sandbox.py  state_sandbox.py
app/core/: __init__.py  checkpointer.py  config.py  database.py  deps.py  exceptions.py  graph.py  lifespan.py  permissions.py  security.py
app/models/: __init__.py  base.py  heroes.py  mixin.py  permission.py  role.py  user.py  users.py
app/repositories/: __init__.py  base.py  role.py  user.py
app/repository/: heroes.py
app/schemas/: __init__.py  chat.py  conversation.py  heroes.py  role.py  token.py  user.py  users.py
app/service/: heroes.py
app/services/: __init__.py  auth.py  role.py  user.py
app/utils/: __init__.py  datetime.py
docs/: AsyncSqliteSaver工作原理.md
scripts/: create_superuser.py  create_test_admin.py  init_rbac.py  test_docker_sandbox.py  test_file_backend.py  test_file_upload.py  test_filesystem_sandbox.py  test_multi_user_isolation.py  test_state_sandbox.py
tests/: conftest.py  test_dynamic_graph.py
tests/e2e/performance/: README.md  analyze_performance.py  chat_performance_test.py  locust.conf  run_performance_tests.py  test_stream_performance.py
tests/integration/: test_chat_route.py  test_conversations_route.py  test_role_route.py  test_user_route.py
tests/unit/: __init__.py  test_schemas.py  test_security.py
web/: AGENTS.md  DEPLOYMENT.md  README.md  UI_CHANGES.md  UI_improve.md  index.html  nginx.conf.example  package.json  pnpm-lock.yaml  quick-deploy.sh  tailwind.config.ts
web/src/: App.tsx  index.css
web/src/api/: aPIDoc.ts
web/src/components/: AIMessage.tsx  ChatInput.tsx  EmptyState.tsx  MessageItem.tsx  MessageList.tsx  MessageSkeleton.tsx  SearchDialog.tsx  Sidebar.tsx  ToolCallCard.tsx  ToolCallMessage.tsx  UserMessage.tsx  UserStats.tsx  index.ts
web/src/hooks/: index.ts  useChat.ts  useConversations.ts  useUserSettings.ts
web/src/pages/: Chat.tsx  Login.tsx  Register.tsx  Settings.tsx
web/src/stores/: authStore.ts  chatStore.ts  themeStore.ts  userSettingsStore.ts
web/src/utils/: date.ts  request.ts
