[project]
name = "fastapi-template"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "bcrypt>=5.0.0",
    "docker>=7.1.0",
    "email-validator>=2.3.0",
    "fastapi[uvicorn]>=0.121.1",
    "httpx>=0.28.1",
    "ipython>=9.7.0",
    "langchain>=1.0.5",
    "langchain-mcp-adapters>=0.1.13",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "locust>=2.39.1",
    "loguru>=0.7.3",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.1",
    "python-jose[cryptography]>=3.5.0",
    "ruff>=0.14.4",
    "sqlalchemy>=2.0.44",
    "types-requests>=2.32.4.20250913",
    "uvicorn>=0.38.0",
]

[tool.ruff]
# 设置行长度
line-length = 120
# Python 版本
target-version = "py312"

[tool.ruff.format]
# 使用双引号
quote-style = "double"
# 使用空格缩进
indent-style = "space"
# 跳过魔法尾随逗号(设为false会更激进地换行)
skip-magic-trailing-comma = false
# 行尾风格
line-ending = "auto"
# 文档字符串格式
docstring-code-format = true

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
# 忽略的规则
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # 允许在 __init__.py 中导入但不使用

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.e2e.performance.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"


[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
]
