[project]
name = "fastapi-template"
version = "0.1.0"
description = "基于 FastAPI 的现代 Python 后端项目模板"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.1",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.121.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "ty>=0.0.8",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.14.4",
]

[tool.ruff]
# 设置行长度
line-length = 120
# Python 版本
target-version = "py312"

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
# 忽略的规则
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # 允许在 __init__.py 中导入但不使用

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]

# ty - 超快 Python 类型检查器 (比 mypy 快 10x-100x)
# https://github.com/astral-sh/ty
[tool.ty.environment]
python-version = "3.12"
python = ".venv"
root = ["."]

[tool.ty.rules]
# 代码质量警告
unused-ignore-comment = "warn"
redundant-cast = "warn"
# 忽略动态属性访问（BaseRepository 泛型需要）
possibly-missing-attribute = "ignore"
unresolved-attribute = "ignore"
# 忽略泛型模型的动态赋值（软删除场景）
invalid-assignment = "ignore"

[tool.ty.src]
include = ["app"]
exclude = ["alembic/", "tests/"]

[tool.ty.terminal]
output-format = "full"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/__init__.py",
    "*/migrations/*",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

